--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,35 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <!--Toolbar-->
+    <include
+        android:id="@+id/toolbarRegister"
+        layout="@layout/my_toolbar" />
+
 
     <!--Content-->
     <LinearLayout
         android:background="@color/my_white"
+        android:layout_margin="@dimen/margin"
         android:padding="@dimen/padding"
         android:orientation="vertical"
-        android:layout_margin="@dimen/margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <!--Logo-->
-        <ImageView
-            android:src="@drawable/logo"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="@dimen/logo"
-            android:layout_height="@dimen/logo" />
+        <!--Name-->
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <!--Add Name-->
-        <TextView
-            android:layout_marginBottom="@dimen/margin2"
-            android:layout_marginTop="@dimen/margin2"
-            android:textColor="@color/colorPrimaryDark"
-            android:layout_gravity="center_horizontal"
-            android:textStyle="bold"
-            android:text="@string/title_thai"
-            android:textSize="@dimen/h1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <!--Icon-->
+            <ImageView
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_action_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <!--TextField-->
+            <EditText
+                android:textColor="@color/colorPrimaryDark"
+                android:inputType="text"
+                android:hint="@string/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
+        </LinearLayout>
 
         <!--User-->
         <LinearLayout
@@ -71,7 +83,7 @@
             <!--TextField-->
             <EditText
                 android:textColor="@color/colorPrimaryDark"
-                android:inputType="textPassword"
+                android:inputType="text"
                 android:hint="@string/pass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -79,27 +91,8 @@
 
         </LinearLayout>
 
-        <!--Login Button-->
-        <Button
-            android:text="@string/login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <!--New Register-->
-        <TextView
-            android:clickable="true"
-            android:id="@+id/txtNewRegister"
-            android:layout_marginTop="@dimen/margin2"
-            android:textStyle="italic"
-            android:textColor="@color/colorAccent"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/register"
-            android:textSize="@dimen/h2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-
     </LinearLayout>
+
 
 
 </LinearLayout>
