--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -34,6 +34,7 @@
 
             <!--TextField-->
             <EditText
+                android:id="@+id/edtName"
                 android:textColor="@color/colorPrimaryDark"
                 android:inputType="text"
                 android:hint="@string/name"
@@ -58,6 +59,7 @@
 
             <!--TextField-->
             <EditText
+                android:id="@+id/edtUser"
                 android:textColor="@color/colorPrimaryDark"
                 android:inputType="text"
                 android:hint="@string/user"
@@ -82,6 +84,7 @@
 
             <!--TextField-->
             <EditText
+                android:id="@+id/edtPassword"
                 android:textColor="@color/colorPrimaryDark"
                 android:inputType="text"
                 android:hint="@string/pass"
