--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="h1">24sp</dimen>
     <dimen name="h2">18sp</dimen>
     <dimen name="logo">140dp</dimen>
+    <dimen name="icon">100</dimen>
     <dimen name="padding">20dp</dimen>
     <dimen name="margin2">16dp</dimen>
 </resources>
